Fixed spacing in the modal dialog

--- a/src/main/resources/assets/styles/widgets/layers/layers-content-tree-dialog.less
+++ b/src/main/resources/assets/styles/widgets/layers/layers-content-tree-dialog.less
@@ -8,8 +8,6 @@
   }
 
   .modal-dialog-body {
-    max-height: 80vh;
-    padding-bottom: 15px;
 
     .layers-content-tree-list {
       .layers-item-view-data {
@@ -48,9 +46,5 @@
     .level(@level: 0) {
       margin-left: 15px * @level;
     }
-  }
-
-  .modal-dialog-footer {
-    display: none;
   }
 }
